fix des error